unpackaged/main/default/objects/OrderApi__Connection_Type__c/OrderApi__Connection_Type__c.object-meta.xml
<CustomObject>
    <description>Connection Types allow you to customize the different types of Connections that can be created in the database.</description>
    <label>Connection Type</label>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connection Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>