unpackaged/main/default/objects/OrderApi__Connection_Type__c/fields/OrderApi__Active__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only active Connection Types can be used to create new Connections.</description>
    <inlineHelpText>Only active Connection Types can be used to create new Connections.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>