unpackaged/main/default/objects/OrderApi__Connection_Type__c/fields/OrderApi__Allow_Accounts__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Allow_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this Relationship Type can be associated with Accounts.</description>
    <inlineHelpText>When checked, this Relationship Type can be associated with Accounts.</inlineHelpText>
    <label>Allow Accounts</label>
    <type>Checkbox</type>
</CustomField>