unpackaged/main/default/objects/OrderApi__Connection_Type__c/fields/OrderApi__Allow_Contacts__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Allow_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this Relationship Type can be associated with Contacts.</description>
    <inlineHelpText>When checked, this Relationship Type can be associated with Contacts.</inlineHelpText>
    <label>Allow Contacts</label>
    <type>Checkbox</type>
</CustomField>