unpackaged/main/default/objects/OrderApi__Connection_Type__c/fields/OrderApi__Category__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Category__c</fullName>
    <description>**Required** Select the most appropriate category for the Relationship Type.</description>
    <inlineHelpText>**Required** Select the most appropriate category for the Relationship Type.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Colleague</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Spousal</fullName>
            </value>
            <value>
                <fullName>Religious</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>