unpackaged/main/default/objects/OrderApi__Connection_Type__c/fields/OrderApi__Mapped_Connections__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Mapped_Connections__c</fullName>
    <description>**System Calculated** Count of Mapped Connection Types.</description>
    <inlineHelpText>**System Calculated** Count of Mapped Connection Types.</inlineHelpText>
    <label>Mapped Connections</label>
    <summaryForeignKey>OrderApi__Connection_Type_Mapping__c.OrderApi__Connection_Type__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>